fixed clipping on portrait mode

--- a/demos/css-regions/road-trip/scss/style.scss
+++ b/demos/css-regions/road-trip/scss/style.scss
@@ -347,7 +347,6 @@ html,body{
             display: block;
         }
         .region:nth-child(1){
-            width:50%;      
             height:90%; 
             top: 5%;
             left:2%;
